fix: grid works on mobile

--- a/css/css_15.4/style.css
+++ b/css/css_15.4/style.css
@@ -72,60 +72,46 @@ img {
     grid-template-rows: repeat(18, 1fr);
   }
   .img1 {
-    grid-column: 1 / span 2;
-    grid-row: 1 / span 5;
+    grid-area: 1 / 1 / 6 / 3;
   }
   .img2 {
-    grid-column: 3 / span 2;
-    grid-row: 1 / span 7;
+    grid-area: 1 / 3 / 8 / 5;
   }
   .img3 {
-    grid-column: 5 / span 2;
-    grid-row: 1 / span 3;
+    grid-area: 1 / 5 / 5 / 7;
   }
   .img4 {
-    grid-column: 7 / -1;
-    grid-row: 1 / span 2;
+    grid-area: 1 / 7 / 4 / 9;
   }
   .img5 {
-    grid-column: 1 / span 2;
-    grid-row: 6 / span 4;
+    grid-area: 6 / 1 / 11 / 3;
   }
   .img6 {
-    grid-column: 5 / span 2;
-    grid-row: 5 / span 3;
+    grid-area: 5 / 5 / 8 / 7;
   }
   .img7 {
-    grid-column: 7 / span 2;
-    grid-row: 3 / span 9;
+    grid-area: 4 / 7 / 17 / 9;
   }
   .img8 {
-    grid-column: 3 / span 4;
-    grid-row: 8 / span 4;
+    grid-area: 8 / 3 / 18 / 7;
   }
   .img9 {
-    grid-column: 1 / 2;
-    grid-row: 10 / span 15;
+    grid-area: 11 / 1 / 18 / 3;
   }
   .img10 {
-    grid-column: 3 / span 3;
-    grid-row: 14 / -1;
+    grid-area: 18 / 3 / 23 / 6;
   }
   .img11 {
-    grid-column: 7 / span 1;
-    grid-row: 12 / span 3;
+    grid-area: 17 / 7 / 20 / 9;
   }
   .img12 {
-    grid-column: 6 / span 1;
-    grid-row: 14 / -1;
+    grid-area: 18 / 6 / 23 / 7;
   }
   .img13 {
-    grid-column: 1 / span 2;
-    grid-row: 15 / -1;
+    grid-area: 18 / 1 / 23 / 3;
   }
   .img14 {
-    grid-column: 7 / -1;
-    grid-row: 15 / -1;
+    grid-area: 20 / 7 / 23 / 9;
   }
 }
 
